@@ -1,7 +1,8 @@
-CHANGELOG 2JULY23 v0.59.5:
+CHANGELOG 3JULY23 v0.59.5:
 > Improved polymorphism, removed most exceptions to dynamic poly
 > Added more hash definitions in support of future functionality
 > Random inline assembly injections break up function blocks for resilience against analysis
+> Unhooking via Perun's Fart method during command execution
 
 CHANGELOG 21MAY23 v0.59.4:
 > Architecture part of default name (Revenant_x64/x86.exe)
